2005-12-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs:
		Ensure every assembly reference is processed.

	* Mono.Cecil/ReflectionHelper.cs:
		Don't assume the cache is magically loaded.
		Aka: most stupid bug of the year.

2005-12-19  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/DebugHeader.cs
	  Mono.Cecil.Binary/DebugHeader.cs
	  Mono.Cecil.Binary/DebugStoreType.cs:
		New files to store debug header infos.
	* Mono.Cecil.dll.sources: updated
	* CodeGen/cecil.xml
	  CodeGen/cecil-gen.rb
	  Mono.Cecil/StructureWriter.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		Read and write debug header.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Revert revision 54409.

2005-12-14  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Cil/CilWorker.cs:
		Add a remove method.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Don't allocate potential big arrays here.

2005-12-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Set the correct version for .net 2 assemblies.
		Correctly write embedded resources.
		Fix #76963.

2005-12-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/MethodSpecification.cs:
		Override the declaring type and the name property to
		match the inner method.
	* Mono.Cecil/GenericInstanceType.cs:
		Correctly set the FullName.
	* Mono.Cecil/GenericInstanceMethod.cs:
		Style.

2005-12-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeDefinition.cs:
		Fix interface import. Patch by Thomas Gil.

2005-11-24  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb
	  CodeGen/templates/MetadataTableReader.cs
	  CodeGen/templates/PEFileHeader.cs
	  CodeGen/templates/CLIHeader.cs